--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "db:pull": "prisma db pull",
     "db:generate": "prisma generate",
     "db:migrate:dev": "prisma migrate dev",
-    "test:e2e": "playwright test",
-    "test:e2e:headed": "playwright test --headed"
+    "test:e2e": "dotenv -e .env.test playwright test",
+    "test:e2e:headed": "dotenv -e .env.test playwright test --headed"
   },
   "dependencies": {
     "@faker-js/faker": "^9.3.0",
@@ -24,6 +24,7 @@
     "@radix-ui/react-slot": "^1.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv-cli": "^7.4.4",
     "geist": "^1.3.1",
     "input-otp": "^1.4.1",
     "lucide-react": "^0.468.0",
