--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -31,7 +31,7 @@ jobs:
     - name: Install dependencies
       run: bun install
     - name: Setup database
-      run: bunx prisma db migrate deploy
+      run: bunx prisma migrate deploy
     - name: Install Playwright Browsers
       run: bunx playwright install --with-deps
     - name: Run Playwright tests
